fixes to get the `bundle` script to work properly  (#59)
* version scss 1.0.1 for theme, fixed lint issues

* downgraded php version from 7.4 to 7.3.11

* added npm script for dev server

* lint issues

* changed theme name

* compiled css

* ignore any zip file

--- a/due-processed/sass/style.scss
+++ b/due-processed/sass/style.scss
@@ -1,8 +1,8 @@
 /*!
-Theme Name: Due_Processed
+Theme Name: Due Processed
 Author: Due Processed
 Description: Theme for dueprocessed.com
-Version: 1.0.0
+Version: 1.0.1
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
