--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -1,8 +1,8 @@
 /*!
-Theme Name: Due_Processed
+Theme Name: Due Processed
 Author: Due Processed
 Description: Theme for dueprocessed.com
-Version: 1.0.0
+Version: 1.0.1
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -456,7 +456,7 @@ h5,
 h6 {
 	clear: both;
 	margin: 0;
-	font-weight: normal;
+	font-weight: 400;
 }
 
 h1 {
@@ -994,7 +994,6 @@ textarea {
 	display: flex;
 	flex-direction: row;
 }
-
 @media (max-width: 768px) {
 	.author-profile-body {
 		flex-direction: column;
@@ -1006,7 +1005,6 @@ textarea {
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	margin-bottom: 10px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-title-desktop {
 		display: none;
@@ -1026,7 +1024,6 @@ textarea {
 .author-profile-name-desktop {
 	margin-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-name-desktop {
 		display: none;
@@ -1037,7 +1034,6 @@ textarea {
 	display: none;
 	margin-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-photo-name-container-mobile {
 		display: inline-block;
@@ -1057,7 +1053,6 @@ textarea {
 	width: 141px;
 	height: 141px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-photo-desktop {
 		display: none;
@@ -1081,7 +1076,6 @@ textarea {
 	vertical-align: top;
 	margin-right: 40px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-bio {
 		margin: 0 0 20px;
@@ -1171,11 +1165,9 @@ textarea {
 	display: block;
 	text-decoration: none;
 }
-.main-navigation .menu > .menu-item a {
+.main-navigation .menu > .menu-item > a {
 	line-height: 60px;
 	margin-right: 50px;
-}
-.main-navigation .menu > .menu-item > a {
 	border-bottom: 3px solid transparent;
 }
 .main-navigation .menu > .menu-item > a:hover,
@@ -1587,7 +1579,6 @@ input.search-field {
 	grid-column: 1 / 3;
 	text-align: center;
 }
-
 @media (max-width: 768px) {
 	.single-post .entry-header {
 		text-align: left;
@@ -1667,23 +1658,19 @@ input.search-field {
 	margin-top: 20px;
 	padding-top: 20px;
 }
-
 @media (max-width: 768px) {
 	.footnotes-footer {
 		display: block;
 	}
 }
-
 .footnotes-footer.footnote-hidden {
 	display: none;
 }
-
 .footnotes-footer .footnotes-footer-title {
 	margin-bottom: 20px;
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 }
-
 .footnotes-footer .footnote-cta {
 	display: none;
 }
@@ -1694,7 +1681,6 @@ input.search-field {
 	font-family: "Lora Regular", georgia, "Times New Roman", times, serif;
 	line-height: 20px;
 }
-
 .single-post .footnote-wrapper {
 	display: inline;
 }
