--- a/due-processed/sass/base/typography/_headings.scss
+++ b/due-processed/sass/base/typography/_headings.scss
@@ -6,7 +6,7 @@ h5,
 h6 {
 	clear: both;
 	margin: 0;
-	font-weight: normal;
+	font-weight: 400; // 400 = normal - scss linter error: Expected numeric font-weight notation
 }
 
 h1 {
