--- a/due-processed/sass/components/masthead/_masthead.scss
+++ b/due-processed/sass/components/masthead/_masthead.scss
@@ -1,7 +1,8 @@
 $spacing__mobile-masthead-text: 11px;
 
 .masthead-header {
-	@include font-body($size: medium);
+	@include font-header($size: large);
+	text-align: center;
 	margin-bottom: $spacing__large;
 }
 
