--- a/due-processed/sass/site/_site-main.scss
+++ b/due-processed/sass/site/_site-main.scss
@@ -6,6 +6,6 @@
 		margin-bottom: $spacing__x-large;
 	}
 	margin: $spacing__small;
-	overflow: hidden; /* Resolves issue with <pre> elements forcing full width. */
+	overflow: visible;
 	position: relative;
 }
