chore: fix mobile about page styles

--- a/due-processed/sass/editor/_custom-paragraph.scss
+++ b/due-processed/sass/editor/_custom-paragraph.scss
@@ -1,10 +1,12 @@
 .wp-block-due-processed-custom-paragraph {
 	display: flex;
 	justify-content: center;
-	width: 200vw;
-	position: relative;
-	left: calc(-100vw + 50%);
 	background-color: $color__custom-paragraph;
+	@include breakpoint-above(tablet-landscape) {
+		width: 200vw;
+		position: relative;
+		left: calc(-100vw + 50%);
+	}
 }
 
 .wp-block-due-processed-custom-paragraph p {
