--- a/due-processed/style-rtl.css
+++ b/due-processed/style-rtl.css
@@ -1101,11 +1101,14 @@ textarea {
 	margin-right: 10px;
 }
 
-.about-container {
-	display: flex;
-	justify-content: center;
-	margin-top: 20px;
+@media (min-width: 769px) {
+	.about-container {
+		display: flex;
+		justify-content: center;
+		margin-top: 20px;
+	}
 }
+
 .about-container h1,
 .about-container h2 {
 	font-size: 2.8rem;
@@ -1113,12 +1116,14 @@ textarea {
 	line-height: 30px;
 	text-align: center;
 }
+
 @media (max-width: 768px) {
 	.about-container p {
 		margin-right: 20px;
 		margin-left: 20px;
 	}
 }
+
 .about-container .entry-content {
 	max-width: 636px;
 }
@@ -2045,10 +2050,14 @@ input.search-field {
 .wp-block-due-processed-custom-paragraph {
 	display: flex;
 	justify-content: center;
-	width: 200vw;
-	position: relative;
-	right: calc(-100vw + 50%);
 	background-color: #e3eff4;
+}
+@media (min-width: 769px) {
+	.wp-block-due-processed-custom-paragraph {
+		width: 200vw;
+		position: relative;
+		right: calc(-100vw + 50%);
+	}
 }
 
 .wp-block-due-processed-custom-paragraph p {
