add social share icons and UAT fixes (#64)
* add social share plugin to post

* article tweaks & finishing touches

* sticky header on mw and desktop

* add transition effect and opacity on hover to links

* remove redundant TODO

* add generated css

* use &hellip; for more string

* fixup! use &hellip; for more string

--- a/due-processed/sass/abstracts/mixins/_mixins.scss
+++ b/due-processed/sass/abstracts/mixins/_mixins.scss
@@ -19,3 +19,9 @@
 		width: calc(100% - (2 * 20px));
 	}
 }
+
+@mixin primary-viewport-width {
+        position: relative;
+        width: 100vw;
+        left: calc((100vw - 100%) / -2);
+}
