--- a/due-processed/sass/components/_components.scss
+++ b/due-processed/sass/components/_components.scss
@@ -27,6 +27,10 @@
 --------------------------------------------- */
 @import "footnotes/footnotes";
 
+/* Social Share
+--------------------------------------------- */
+@import "social-share/social-share";
+
 /* Comments
 --------------------------------------------- */
 @import "comments/comments";
