--- a/due-processed/sass/base/elements/_links.scss
+++ b/due-processed/sass/base/elements/_links.scss
@@ -1,12 +1,14 @@
 a {
 	color: $color__link;
 	text-decoration: none;
+        transition: opacity 0.2s ease;
 
 	&:visited {
 		color: $color__link-visited;
 	}
 
 	&:hover {
+                opacity: 0.7;
 		text-decoration: underline;
 	}
 
