--- a/due-processed/sass/components/navigation/_main-navigation.scss
+++ b/due-processed/sass/components/navigation/_main-navigation.scss
@@ -34,9 +34,12 @@
 				line-height: 60px;
 				margin-right: $spacing__x-large;
 				border-bottom: 3px solid transparent;
+                                cursor: pointer;
+
 				&:hover,
 				&.focus {
 					border-bottom: 3px solid $color__link-hover;
+                                        transition: border 0.2s ease;
 				}
 			}
 
@@ -131,15 +134,11 @@
 		position: absolute;
 		width: 100%;
 		background: $color__background-body;
-		height: 100%;
+                height: 100vh;
 		z-index: 1000;
 		top: 55px;
 		overflow: scroll;
 		padding-bottom: 80px;
-
-		.admin-bar & {
-			top: 101px;
-		}
 
 		.menu-item {
 			padding: 0 $spacing__small;
@@ -163,6 +162,12 @@
 					padding: 0;
 				}
 				> .sub-menu {
+                                        .menu-item {
+                                                a {
+                                                        margin-bottom: $spacing__medium;
+                                                }
+                                        }
+
 					.sub-menu {
 						display: none;
 					}
