UAT fixes for search, author pages (#67)
* removed `add_action` calls for methods only meant for search/category results
* UAT fixes for searches
* author UAT updates
* fixed spacing for posts
* created template for reusable email obfuscation
* added email-encoder-bundle plugin

--- a/due-processed/sass/components/content/_posts-and-pages.scss
+++ b/due-processed/sass/components/content/_posts-and-pages.scss
@@ -16,9 +16,12 @@
 }
 
 .page-title {
-	margin: 0 0 $spacing__medium;
+	margin: 0 0 $spacing__large;
 	text-align: center;
 	@include font-header($size: large);
+	@include breakpoint-below(tablet-portrait) {
+		margin-bottom: $spacing__small;
+	}
 }
 
 .page-content,
