--- a/due-processed/sass/components/content/_search.scss
+++ b/due-processed/sass/components/content/_search.scss
@@ -33,3 +33,16 @@
 		text-align: left;
 	}
 }
+
+
+.no-results {
+	&.not-found > .page-header {
+		border-bottom: 1px solid $color__border;
+		margin-bottom: $spacing__large;
+	}
+}
+
+.no-results-recent-articles {
+	margin-bottom: $spacing__medium;
+	text-align: center;
+}
