--- a/due-processed/style-rtl.css
+++ b/due-processed/style-rtl.css
@@ -491,7 +491,7 @@ h6 {
 }
 
 p {
-	margin: 30px 0;
+	margin: 0 0 30px 0;
 }
 
 dfn,
@@ -623,11 +623,13 @@ table {
 a {
 	color: #005b83;
 	text-decoration: none;
+	transition: opacity 0.2s ease;
 }
 a:visited {
 	color: #005b83;
 }
 a:hover {
+	opacity: 0.7;
 	text-decoration: underline;
 }
 a:hover,
@@ -756,8 +758,12 @@ textarea {
 ## Header
 --------------------------------------------------------------*/
 .site-header {
-	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05);
 	padding-top: 20px;
+	position: sticky;
+	top: 0;
+	background: #fff;
+	z-index: 100;
 }
 .site-header a {
 	color: #151515;
@@ -990,6 +996,7 @@ textarea {
 .author-profile-body {
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
 }
 @media (max-width: 768px) {
 	.author-profile-body {
@@ -1069,7 +1076,8 @@ textarea {
 
 .author-profile-bio {
 	display: inline-block;
-	max-width: 676px;
+	max-width: 900px;
+	width: 100%;
 	vertical-align: top;
 	margin-left: 40px;
 }
@@ -1081,6 +1089,7 @@ textarea {
 
 .author-profile-body-right {
 	white-space: nowrap;
+	width: 300px;
 }
 
 .author-profile-contact-info {
@@ -1089,8 +1098,7 @@ textarea {
 
 .author-profile-icon {
 	display: inline-block;
-	height: 20px;
-	width: 20px;
+	width: 22px;
 	vertical-align: middle;
 }
 
@@ -1166,10 +1174,12 @@ textarea {
 	line-height: 60px;
 	margin-left: 50px;
 	border-bottom: 3px solid transparent;
+	cursor: pointer;
 }
 .main-navigation .menu > .menu-item > a:hover,
 .main-navigation .menu > .menu-item > a.focus {
 	border-bottom: 3px solid #005b83;
+	transition: border 0.2s ease;
 }
 .main-navigation .menu > .menu-item:hover > .sub-menu,
 .main-navigation .menu > .menu-item.focus > .sub-menu {
@@ -1250,14 +1260,11 @@ textarea {
 		position: absolute;
 		width: 100%;
 		background: #fff;
-		height: 100%;
+		height: 100vh;
 		z-index: 1000;
 		top: 55px;
 		overflow: scroll;
 		padding-bottom: 80px;
-	}
-	.admin-bar .main-navigation {
-		top: 101px;
 	}
 	.main-navigation .menu-item {
 		padding: 0 20px;
@@ -1273,6 +1280,9 @@ textarea {
 	}
 	.main-navigation .menu > .menu-item .menu-item {
 		padding: 0;
+	}
+	.main-navigation .menu > .menu-item > .sub-menu .menu-item a {
+		margin-bottom: 30px;
 	}
 	.main-navigation .menu > .menu-item > .sub-menu .sub-menu {
 		display: none;
@@ -1352,6 +1362,7 @@ input.search-field {
 --------------------------------------------- */
 .entry-meta-divider {
 	padding: 0 5px;
+	color: #ccc;
 }
 
 /* content components
@@ -1497,11 +1508,16 @@ input.search-field {
 }
 
 .page-title {
-	margin: 0 0 30px;
+	margin: 0 0 40px;
 	text-align: center;
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
 	line-height: 30px;
+}
+@media (max-width: 768px) {
+	.page-title {
+		margin-bottom: 20px;
+	}
 }
 
 .page-content,
@@ -1542,19 +1558,21 @@ input.search-field {
 	color: #151515;
 }
 
-.single-post .post,
-.single-post .post-navigation {
+.single-post .post {
 	display: grid;
 	grid-template-columns: minmax(0, 640px) 232px;
 	margin: 0 auto;
 	max-width: 872px;
 }
 @media (max-width: 768px) {
-	.single-post .post,
-	.single-post .post-navigation {
+	.single-post .post {
 		grid-template-columns: 1fr;
 		max-width: none;
 	}
+}
+
+.single-post .post-navigation {
+	display: none;
 }
 
 .single-post .post {
@@ -1565,6 +1583,26 @@ input.search-field {
 	grid-row: 1;
 	grid-column: 1 / 3;
 	margin-bottom: 40px;
+}
+@media (min-width: 769px) {
+	.single-post .post-thumbnail {
+		height: 484px;
+		text-align: center;
+	}
+	.single-post .post-thumbnail img {
+		height: 100%;
+		width: auto;
+	}
+}
+@media (max-width: 768px) {
+	.single-post .post-thumbnail {
+		position: relative;
+		width: 100vw;
+		right: calc((100vw - 100%) / -2);
+		grid-row: 3;
+		margin-top: 20px;
+		margin-bottom: 0;
+	}
 }
 
 .single-post .entry-title {
@@ -1578,7 +1616,20 @@ input.search-field {
 }
 @media (max-width: 768px) {
 	.single-post .entry-header {
+		grid-row: 1;
 		text-align: right;
+	}
+}
+
+.single-post .entry-title-sep {
+	height: 1px;
+	width: 56px;
+	background: #ccc;
+	margin: 0 auto 20px;
+}
+@media (max-width: 768px) {
+	.single-post .entry-title-sep {
+		display: none;
 	}
 }
 
@@ -1635,6 +1686,16 @@ input.search-field {
 	.search-results-page-title {
 		text-align: right;
 	}
+}
+
+.no-results.not-found > .page-header {
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 40px;
+}
+
+.no-results-recent-articles {
+	margin-bottom: 30px;
+	text-align: center;
 }
 
 /* Footnotes
@@ -1781,6 +1842,61 @@ input.search-field {
 }
 
 .footnote-inline .footnote-cta {
+	display: none;
+}
+
+/* Social Share
+--------------------------------------------- */
+.shared-counts-wrap.style-small-circle {
+	margin: 0;
+	display: flex;
+	flex-flow: column;
+	width: auto;
+	position: absolute;
+	right: -64px;
+}
+@media (max-width: 1024px) {
+	.shared-counts-wrap.style-small-circle {
+		position: initial;
+		right: auto;
+		margin: 20px 0;
+		flex-flow: row;
+	}
+}
+.shared-counts-wrap.style-small-circle .shared-counts-no-count .shared-counts-count {
+	display: none;
+}
+.shared-counts-wrap.style-small-circle .shared-counts-button {
+	background: #fff;
+	border: 1px solid #ccc;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 34px;
+	height: 34px;
+	border-radius: 999px;
+	margin-bottom: 10px;
+}
+@media (max-width: 1024px) {
+	.shared-counts-wrap.style-small-circle .shared-counts-button {
+		margin-bottom: 0;
+		margin-left: 10px;
+	}
+}
+.shared-counts-wrap.style-small-circle .shared-counts-icon-label {
+	height: 18px;
+}
+.shared-counts-wrap.style-small-circle .shared-counts-icon {
+	display: inline-block;
+	height: 100%;
+	color: #151515;
+}
+.shared-counts-wrap.style-small-circle .shared-counts-icon svg {
+	fill: currentColor;
+	width: 100%;
+	height: 100%;
+}
+.shared-counts-wrap.style-small-circle .shared-counts-label {
 	display: none;
 }
 
