--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -19,6 +19,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
+
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
@@ -88,11 +89,15 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
+
 /* Normalize
 --------------------------------------------- */
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
 /* Document
 	 ========================================================================== */
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -104,6 +109,7 @@ html {
 
 /* Sections
 	 ========================================================================== */
+
 /**
  * Remove the margin in all browsers.
  */
@@ -129,6 +135,7 @@ h1 {
 
 /* Grouping content
 	 ========================================================================== */
+
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
@@ -150,6 +157,7 @@ pre {
 
 /* Text-level semantics
 	 ========================================================================== */
+
 /**
  * Remove the gray background on active links in IE 10.
  */
@@ -215,6 +223,7 @@ sup {
 
 /* Embedded content
 	 ========================================================================== */
+
 /**
  * Remove the border on images inside links in IE 10.
  */
@@ -224,6 +233,7 @@ img {
 
 /* Forms
 	 ========================================================================== */
+
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
@@ -369,6 +379,7 @@ textarea {
 
 /* Interactive
 	 ========================================================================== */
+
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
@@ -385,6 +396,7 @@ summary {
 
 /* Misc
 	 ========================================================================== */
+
 /**
  * Add the correct display in IE 10+.
  */
@@ -401,6 +413,7 @@ template {
 
 /* Box sizing
 --------------------------------------------- */
+
 /* Inherit box-sizing to more easily change it's value on a component level.
 @link http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
 *,
@@ -416,6 +429,7 @@ html {
 /*--------------------------------------------------------------
 # Base
 --------------------------------------------------------------*/
+
 /* Typography
 --------------------------------------------- */
 body,
@@ -537,7 +551,6 @@ html {
 body {
 	background: #fff;
 }
-
 body.overflow-hidden {
 	overflow: hidden;
 }
@@ -612,25 +625,23 @@ a {
 	text-decoration: none;
 	transition: opacity 0.2s ease;
 }
-
 a:visited {
 	color: #005b83;
 }
-
 a:hover {
 	opacity: 0.7;
 	text-decoration: underline;
 }
-
-a:hover, a:focus, a:active {
+a:hover,
+a:focus,
+a:active {
 	color: #005b83;
 }
-
 a:focus {
 	outline: none;
 }
-
-a:hover, a:active {
+a:hover,
+a:active {
 	outline: 0;
 }
 
@@ -653,7 +664,6 @@ input[type="submit"] {
 	cursor: pointer;
 	outline: none;
 }
-
 .button:hover,
 button:hover,
 input[type="button"]:hover,
@@ -662,8 +672,8 @@ input[type="submit"]:hover {
 	opacity: 0.85;
 	color: #fff;
 }
-
-.button:active, .button:focus,
+.button:active,
+.button:focus,
 button:active,
 button:focus,
 input[type="button"]:active,
@@ -674,7 +684,6 @@ input[type="submit"]:active,
 input[type="submit"]:focus {
 	opacity: 0.85;
 }
-
 .button:visited,
 button:visited,
 input[type="button"]:visited,
@@ -712,7 +721,6 @@ textarea {
 	padding-right: 10px;
 	height: 40px;
 }
-
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="url"]:focus,
@@ -745,6 +753,7 @@ textarea {
 /*--------------------------------------------------------------
 # Site
 --------------------------------------------------------------*/
+
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
@@ -756,29 +765,26 @@ textarea {
 	background: #fff;
 	z-index: 100;
 }
-
 .site-header a {
 	color: #151515;
 	text-decoration: none;
 }
-
-.site-header a:hover, .site-header a:focus, .site-header a:active {
+.site-header a:hover,
+.site-header a:focus,
+.site-header a:active {
 	color: #151515;
 }
-
 @media (max-width: 768px) {
 	.site-header {
 		padding-top: 15px;
 		padding-bottom: 10px;
 	}
 }
-
 @media (min-width: 769px) {
 	.site-header .search-form-wrapper {
 		width: 300px;
 	}
 }
-
 @media (max-width: 768px) {
 	.site-header .search-form-wrapper {
 		margin-top: 10px;
@@ -788,7 +794,6 @@ textarea {
 .site-header-top {
 	display: flex;
 }
-
 @media (min-width: 769px) {
 	.site-header-top {
 		width: calc(100% - (2 * 60px));
@@ -799,13 +804,11 @@ textarea {
 		align-items: center;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-header-top {
 		width: calc(100% - (2 * 20px));
 	}
 }
-
 @media (max-width: 768px) {
 	.site-header-top {
 		margin: 0 20px;
@@ -817,13 +820,11 @@ textarea {
 	display: flex;
 	align-items: flex-end;
 }
-
 @media (min-width: 769px) {
 	.site-branding {
 		width: 300px;
 	}
 }
-
 @media (max-width: 768px) {
 	.site-branding {
 		width: 195px;
@@ -844,7 +845,6 @@ textarea {
 		display: flex;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-header-bottom {
 		width: calc(100% - (2 * 20px));
@@ -864,7 +864,6 @@ textarea {
 	margin: 20px;
 	position: relative;
 }
-
 @media (min-width: 769px) {
 	.site-main {
 		width: calc(100% - (2 * 60px));
@@ -875,7 +874,6 @@ textarea {
 		margin-bottom: 50px;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-main {
 		width: calc(100% - (2 * 20px));
@@ -899,19 +897,16 @@ textarea {
 	display: flex;
 	flex-direction: row;
 }
-
 @media (max-width: 768px) {
 	.site-info {
 		width: calc(100% - (2 * 20px));
 	}
 }
-
 .site-info a {
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	color: #151515;
 }
-
 @media (max-width: 768px) {
 	.site-info {
 		flex-direction: column;
@@ -921,7 +916,6 @@ textarea {
 .site-info-left {
 	flex: 3;
 }
-
 @media (max-width: 768px) {
 	.site-info-left {
 		border-bottom: 1px solid #ccc;
@@ -933,7 +927,6 @@ textarea {
 	padding: 0;
 	list-style: none;
 }
-
 .site-info-menu .menu-item {
 	margin-bottom: 10px;
 }
@@ -941,7 +934,6 @@ textarea {
 .site-info-right {
 	flex: 2;
 }
-
 @media (max-width: 768px) {
 	.site-info-right {
 		margin-top: 20px;
@@ -953,7 +945,6 @@ textarea {
 .site-info-row {
 	margin-bottom: 10px;
 }
-
 @media (max-width: 768px) {
 	.site-info-row {
 		margin-bottom: 20px;
@@ -972,7 +963,6 @@ textarea {
 .copyright-desktop {
 	padding-top: 10px;
 }
-
 @media (max-width: 768px) {
 	.copyright-desktop {
 		display: none;
@@ -982,7 +972,6 @@ textarea {
 .copyright-mobile {
 	display: none;
 }
-
 @media (max-width: 768px) {
 	.copyright-mobile {
 		display: inline;
@@ -1007,8 +996,8 @@ textarea {
 .author-profile-body {
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
 }
-
 @media (max-width: 768px) {
 	.author-profile-body {
 		flex-direction: column;
@@ -1020,7 +1009,6 @@ textarea {
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	margin-bottom: 10px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-title-desktop {
 		display: none;
@@ -1040,7 +1028,6 @@ textarea {
 .author-profile-name-desktop {
 	margin-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-name-desktop {
 		display: none;
@@ -1051,7 +1038,6 @@ textarea {
 	display: none;
 	margin-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-photo-name-container-mobile {
 		display: inline-block;
@@ -1071,7 +1057,6 @@ textarea {
 	width: 141px;
 	height: 141px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-photo-desktop {
 		display: none;
@@ -1091,11 +1076,11 @@ textarea {
 
 .author-profile-bio {
 	display: inline-block;
-	max-width: 676px;
+	max-width: 900px;
+	width: 100%;
 	vertical-align: top;
 	margin-right: 40px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-bio {
 		margin: 0 0 20px;
@@ -1104,6 +1089,7 @@ textarea {
 
 .author-profile-body-right {
 	white-space: nowrap;
+	width: 300px;
 }
 
 .author-profile-contact-info {
@@ -1112,8 +1098,7 @@ textarea {
 
 .author-profile-icon {
 	display: inline-block;
-	height: 20px;
-	width: 20px;
+	width: 22px;
 	vertical-align: middle;
 }
 
@@ -1153,59 +1138,53 @@ textarea {
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
+
 /* Navigation
 --------------------------------------------- */
+
 /* Main Navigation (Header)
 --------------------------------------------- */
 .main-navigation {
 	display: block;
 	width: 100%;
 }
-
 .main-navigation .main-navigation ul {
 	display: flex;
 }
-
 .main-navigation .menu,
 .main-navigation .sub-menu {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
 }
-
 .main-navigation .menu {
 	display: flex;
 }
-
 .main-navigation .menu-item {
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	position: relative;
 	white-space: nowrap;
 }
-
 .main-navigation a {
 	display: block;
 	text-decoration: none;
 }
-
 .main-navigation .menu > .menu-item > a {
 	line-height: 60px;
 	margin-right: 50px;
 	border-bottom: 3px solid transparent;
 	cursor: pointer;
 }
-
-.main-navigation .menu > .menu-item > a:hover, .main-navigation .menu > .menu-item > a.focus {
+.main-navigation .menu > .menu-item > a:hover,
+.main-navigation .menu > .menu-item > a.focus {
 	border-bottom: 3px solid #005b83;
 	transition: border 0.2s ease;
 }
-
 .main-navigation .menu > .menu-item:hover > .sub-menu,
 .main-navigation .menu > .menu-item.focus > .sub-menu {
 	display: block;
 }
-
 @media (min-width: 769px) {
 	.main-navigation .menu > .menu-item > .sub-menu {
 		background-color: #fff;
@@ -1221,11 +1200,9 @@ textarea {
 		z-index: 99999;
 	}
 }
-
 .main-navigation .menu > .menu-item > .sub-menu .sub-menu {
 	margin-left: 10px;
 }
-
 .main-navigation .menu > .menu-item > .sub-menu .menu-item a {
 	margin-bottom: 10px;
 }
@@ -1239,18 +1216,15 @@ textarea {
 	background: #fff;
 	color: #151515;
 }
-
 .main-navigation-icon:hover,
 .main-navigation-icon.toggled:hover {
 	opacity: 0.85;
 	color: #151515;
 }
-
 .main-navigation-icon > span,
 .main-navigation-icon.toggled > span {
 	display: inline-block;
 }
-
 .main-navigation-icon > span.main-navigation-close,
 .main-navigation-icon.toggled > span.main-navigation-close {
 	padding: 6px;
@@ -1323,8 +1297,10 @@ textarea {
 
 /* Other Navigation (Comments, Posts, Etc.)
 --------------------------------------------- */
-.site-main .comment-navigation, .site-main
-.posts-navigation, .site-main
+.site-main .comment-navigation,
+.site-main
+.posts-navigation,
+.site-main
 .post-navigation {
 	margin: 0 0 1.5em;
 }
@@ -1375,7 +1351,6 @@ input.search-field {
 	width: 40px;
 	padding: 10px;
 }
-
 @media (max-width: 768px) {
 	.search-submit {
 		background: #fff;
@@ -1395,7 +1370,6 @@ input.search-field {
 .page-title.featured-article-title {
 	margin: 40px 0 30px;
 }
-
 @media (max-width: 768px) {
 	.page-title.featured-article-title {
 		margin: 20px 0;
@@ -1418,13 +1392,11 @@ input.search-field {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 }
-
 @media (max-width: 768px) {
 	.featured-article-wrapper-inner {
 		width: calc(100% - (2 * 20px));
 	}
 }
-
 .featured-article-wrapper-inner::-webkit-scrollbar {
 	display: none;
 }
@@ -1438,7 +1410,6 @@ input.search-field {
 	scroll-snap-align: center;
 	margin-right: 50px;
 }
-
 @media (max-width: 768px) {
 	.featured-article-container {
 		flex-direction: column-reverse;
@@ -1451,7 +1422,6 @@ input.search-field {
 	margin: 89px 40px 30px 60px;
 	flex: 1;
 }
-
 @media (max-width: 768px) {
 	.featured-article-content {
 		margin: 20px;
@@ -1480,7 +1450,6 @@ input.search-field {
 	justify-content: center;
 	padding: 30px 30px 30px 0;
 }
-
 @media (max-width: 768px) {
 	.featured-article-image-container {
 		padding: 0;
@@ -1491,7 +1460,6 @@ input.search-field {
 	max-height: 390px;
 	width: auto;
 }
-
 @media (max-width: 768px) {
 	.featured-article-image {
 		width: 100%;
@@ -1540,11 +1508,16 @@ input.search-field {
 }
 
 .page-title {
-	margin: 0 0 30px;
+	margin: 0 0 40px;
 	text-align: center;
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
 	line-height: 30px;
+}
+@media (max-width: 768px) {
+	.page-title {
+		margin-bottom: 20px;
+	}
 }
 
 .page-content,
@@ -1591,7 +1564,6 @@ input.search-field {
 	margin: 0 auto;
 	max-width: 872px;
 }
-
 @media (max-width: 768px) {
 	.single-post .post {
 		grid-template-columns: 1fr;
@@ -1612,7 +1584,6 @@ input.search-field {
 	grid-column: 1 / 3;
 	margin-bottom: 40px;
 }
-
 @media (min-width: 769px) {
 	.single-post .post-thumbnail {
 		height: 484px;
@@ -1623,7 +1594,6 @@ input.search-field {
 		width: auto;
 	}
 }
-
 @media (max-width: 768px) {
 	.single-post .post-thumbnail {
 		position: relative;
@@ -1644,7 +1614,6 @@ input.search-field {
 	grid-column: 1 / 3;
 	text-align: center;
 }
-
 @media (max-width: 768px) {
 	.single-post .entry-header {
 		grid-row: 1;
@@ -1658,7 +1627,6 @@ input.search-field {
 	background: #ccc;
 	margin: 0 auto 20px;
 }
-
 @media (max-width: 768px) {
 	.single-post .entry-title-sep {
 		display: none;
@@ -1691,7 +1659,6 @@ input.search-field {
 	max-width: 1094px;
 	margin: 0 auto;
 }
-
 @media (max-width: 768px) {
 	.search-results-wrapper {
 		grid-template-columns: 1fr;
@@ -1699,7 +1666,6 @@ input.search-field {
 		max-width: 375px;
 	}
 }
-
 @media (max-width: 768px) {
 	.search-results-wrapper > .post {
 		border-bottom: 1px solid #ccc;
@@ -1712,7 +1678,6 @@ input.search-field {
 		border-bottom: 0;
 	}
 }
-
 .search-results-wrapper > .post > .entry-summary > p {
 	margin: 5px 0;
 }
@@ -1723,8 +1688,19 @@ input.search-field {
 	}
 }
 
+.no-results.not-found > .page-header {
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 40px;
+}
+
+.no-results-recent-articles {
+	margin-bottom: 30px;
+	text-align: center;
+}
+
 /* Footnotes
 --------------------------------------------- */
+
 /* Shared
 --------------------------------------------- */
 .footnote-wrapper,
@@ -1740,23 +1716,19 @@ input.search-field {
 	margin-top: 20px;
 	padding-top: 20px;
 }
-
 @media (max-width: 768px) {
 	.footnotes-footer {
 		display: block;
 	}
 }
-
 .footnotes-footer.footnote-hidden {
 	display: none;
 }
-
 .footnotes-footer .footnotes-footer-title {
 	margin-bottom: 20px;
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 }
-
 .footnotes-footer .footnote-cta {
 	display: none;
 }
@@ -1767,7 +1739,6 @@ input.search-field {
 	font-family: "Lora Regular", georgia, "Times New Roman", times, serif;
 	line-height: 20px;
 }
-
 .single-post .footnote-wrapper {
 	display: inline;
 }
@@ -1785,11 +1756,9 @@ input.search-field {
 	grid-template-columns: 15px 1fr;
 	cursor: pointer;
 }
-
 .footnote-note a {
 	overflow-wrap: break-word;
 }
-
 .footnote-hidden .footnote-note {
 	visibility: hidden;
 }
@@ -1886,7 +1855,6 @@ input.search-field {
 	position: absolute;
 	left: -64px;
 }
-
 @media (max-width: 1024px) {
 	.shared-counts-wrap.style-small-circle {
 		position: initial;
@@ -1895,11 +1863,9 @@ input.search-field {
 		flex-flow: row;
 	}
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-no-count .shared-counts-count {
 	display: none;
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-button {
 	background: #fff;
 	border: 1px solid #ccc;
@@ -1911,30 +1877,25 @@ input.search-field {
 	border-radius: 999px;
 	margin-bottom: 10px;
 }
-
 @media (max-width: 1024px) {
 	.shared-counts-wrap.style-small-circle .shared-counts-button {
-		margin-botton: 0;
+		margin-bottom: 0;
 		margin-right: 10px;
 	}
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-icon-label {
 	height: 18px;
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-icon {
 	display: inline-block;
 	height: 100%;
 	color: #151515;
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-icon svg {
 	fill: currentColor;
 	width: 100%;
 	height: 100%;
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-label {
 	display: none;
 }
@@ -1954,7 +1915,6 @@ input.search-field {
 .widget {
 	margin: 0 0 1.5em;
 }
-
 .widget select {
 	max-width: 100%;
 }
@@ -1981,13 +1941,11 @@ input.search-field {
 	margin-bottom: 1.5em;
 	max-width: 100%;
 }
-
 .wp-caption img[class*="wp-image-"] {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
-
 .wp-caption .wp-caption-text {
 	margin: 0.8075em 0;
 }
@@ -2061,7 +2019,6 @@ input.search-field {
 	justify-content: center;
 	margin-bottom: 20px;
 }
-
 @media (max-width: 768px) {
 	.masthead {
 		flex-direction: column;
@@ -2082,7 +2039,6 @@ input.search-field {
 	border-radius: 50%;
 	margin-bottom: 20px;
 }
-
 @media (max-width: 768px) {
 	.masthead-image {
 		width: 70px;
@@ -2106,7 +2062,6 @@ input.search-field {
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	margin: 0 0 10px;
 }
-
 @media (max-width: 768px) {
 	.masthead-title {
 		margin: 0;
@@ -2123,8 +2078,10 @@ input.search-field {
 /*--------------------------------------------------------------
 # Plugins
 --------------------------------------------------------------*/
+
 /* Jetpack infinite scroll
 --------------------------------------------- */
+
 /* Hide the Posts Navigation and the Footer when Infinite Scroll is in use. */
 .infinite-scroll .posts-navigation,
 .infinite-scroll.neverending .site-footer {
@@ -2139,8 +2096,10 @@ input.search-field {
 /*--------------------------------------------------------------
 # Utilities
 --------------------------------------------------------------*/
+
 /* Accessibility
 --------------------------------------------- */
+
 /* Text meant only for screen readers. */
 .screen-reader-text {
 	border: 0;
@@ -2154,7 +2113,6 @@ input.search-field {
 	width: 1px;
 	word-wrap: normal !important;
 }
-
 .screen-reader-text:focus {
 	background-color: #f5f5f5;
 	border-radius: 3px;
@@ -2183,16 +2141,20 @@ input.search-field {
 /* Alignments
 --------------------------------------------- */
 .alignleft {
+
 	/*rtl:ignore*/
 	float: left;
+
 	/*rtl:ignore*/
 	margin-right: 1.5em;
 	margin-bottom: 1.5em;
 }
 
 .alignright {
+
 	/*rtl:ignore*/
 	float: right;
+
 	/*rtl:ignore*/
 	margin-left: 1.5em;
 	margin-bottom: 1.5em;
@@ -2213,7 +2175,6 @@ input.search-field {
 	justify-content: center;
 	background-color: #e3eff4;
 }
-
 @media (min-width: 769px) {
 	.wp-block-due-processed-custom-paragraph {
 		width: 200vw;
@@ -2225,5 +2186,3 @@ input.search-field {
 .wp-block-due-processed-custom-paragraph p {
 	width: 636px;
 }
-
-/*# sourceMappingURL=style.css.map */
