add single post print page + UAT styling fixes (#68)
* add print header

* add print styles

* fix line-height and link hover

* style tweaks

* header styling updates

* add generated styles

--- a/due-processed/woocommerce.css
+++ b/due-processed/woocommerce.css
@@ -467,8 +467,7 @@ p.no-comments {
 		display: block;
 		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	}
-	.site-header-cart:hover .widget_shopping_cart,
-	.site-header-cart.focus .widget_shopping_cart {
+	.site-header-cart:hover .widget_shopping_cart, .site-header-cart.focus .widget_shopping_cart {
 		left: 0;
 		display: block;
 	}
