--- a/due-processed/sass/components/content/_single-posts-and-pages.scss
+++ b/due-processed/sass/components/content/_single-posts-and-pages.scss
@@ -37,7 +37,6 @@
 		@include breakpoint-below(tablet-portrait) {
 			@include primary-viewport-width();
 			grid-row: 3;
-			margin-top: $spacing__small;
 			margin-bottom: 0;
 		}
 	}
@@ -50,6 +49,7 @@
 		grid-row: 3;
 		grid-column: 1 / 3;
 		text-align: center;
+		padding-bottom: $spacing__medium;
 
 		@include breakpoint-below(tablet-portrait) {
 			grid-row: 1;
