--- a/due-processed/sass/style.scss
+++ b/due-processed/sass/style.scss
@@ -108,7 +108,13 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------- */
 @import "utilities/alignments";
 
-
 /* Custom paragraph block styles
 --------------------------------------------- */
 @import "editor/custom-paragraph";
+
+/*--------------------------------------------------------------
+# Print
+# Order matters! Print styles must go last
+--------------------------------------------------------------*/
+
+@import "print/print";
