--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -462,13 +462,13 @@ h6 {
 h1 {
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
-	line-height: 30px;
+	line-height: 36px;
 }
 
 h2 {
 	font-size: 2.2rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
-	line-height: 36px;
+	line-height: 30px;
 }
 
 h3 {
@@ -623,14 +623,13 @@ table {
 a {
 	color: #005b83;
 	text-decoration: none;
-	transition: opacity 0.2s ease;
+	transition: opacity 0.3s ease;
 }
 a:visited {
 	color: #005b83;
 }
 a:hover {
-	opacity: 0.7;
-	text-decoration: underline;
+	opacity: 0.85;
 }
 a:hover,
 a:focus,
@@ -854,7 +853,7 @@ textarea {
 .site-title {
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
-	line-height: 30px;
+	line-height: 36px;
 }
 
 /*--------------------------------------------------------------
@@ -1120,7 +1119,7 @@ textarea {
 .about-container h2 {
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
-	line-height: 30px;
+	line-height: 36px;
 	text-align: center;
 }
 
@@ -1174,12 +1173,12 @@ textarea {
 	line-height: 60px;
 	margin-right: 50px;
 	border-bottom: 3px solid transparent;
+	transition: border 0.3s ease;
 	cursor: pointer;
 }
 .main-navigation .menu > .menu-item > a:hover,
 .main-navigation .menu > .menu-item > a.focus {
 	border-bottom: 3px solid #005b83;
-	transition: border 0.2s ease;
 }
 .main-navigation .menu > .menu-item:hover > .sub-menu,
 .main-navigation .menu > .menu-item.focus > .sub-menu {
@@ -1433,7 +1432,7 @@ input.search-field {
 .featured-article-header {
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
-	line-height: 30px;
+	line-height: 36px;
 }
 
 .featured-article-lede {
@@ -1512,7 +1511,7 @@ input.search-field {
 	text-align: center;
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
-	line-height: 30px;
+	line-height: 36px;
 }
 @media (max-width: 768px) {
 	.page-title {
@@ -1600,7 +1599,6 @@ input.search-field {
 		width: 100vw;
 		left: calc((100vw - 100%) / -2);
 		grid-row: 3;
-		margin-top: 20px;
 		margin-bottom: 0;
 	}
 }
@@ -1613,6 +1611,7 @@ input.search-field {
 	grid-row: 3;
 	grid-column: 1 / 3;
 	text-align: center;
+	padding-bottom: 30px;
 }
 @media (max-width: 768px) {
 	.single-post .entry-header {
@@ -1740,7 +1739,7 @@ input.search-field {
 	line-height: 20px;
 }
 .single-post .footnote-wrapper {
-	display: inline;
+	display: inline-block;
 }
 
 .footnote-anchor {
@@ -2009,7 +2008,7 @@ input.search-field {
 .masthead-header {
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
-	line-height: 30px;
+	line-height: 36px;
 	text-align: center;
 	margin-bottom: 40px;
 }
@@ -2186,3 +2185,75 @@ input.search-field {
 .wp-block-due-processed-custom-paragraph p {
 	width: 636px;
 }
+
+/*--------------------------------------------------------------
+# Print
+# Order matters! Print styles must go last
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Shared
+--------------------------------------------------------------*/
+@media not print {
+	.site-print-header {
+		display: none;
+	}
+}
+
+@media print {
+	.site-header {
+		position: relative;
+		display: block;
+		box-shadow: none;
+		border-bottom: 1px solid #ccc;
+		padding-bottom: 20px;
+	}
+	.site-header-top,
+	.site-header-bottom {
+		display: none;
+	}
+	.site-print-header {
+		width: calc(100% - (2 * 60px));
+		max-width: 1440px;
+		margin: 0 auto;
+		display: block;
+	}
+}
+
+@media print and (max-width: 768px) {
+	.site-print-header {
+		width: calc(100% - (2 * 20px));
+	}
+}
+
+@media print {
+	.site-print-branding-link {
+		width: 200px;
+	}
+	.edit-link {
+		display: none;
+	}
+	.site-footer {
+		display: none;
+	}
+}
+
+/*--------------------------------------------------------------
+# Single Post
+--------------------------------------------------------------*/
+@media print {
+	body.single-post .entry-content {
+		grid-column: 1 / 3;
+	}
+	body.single-post .shared-counts-wrap,
+	body.single-post .post-thumbnail {
+		display: none;
+	}
+	body.single-post .footnote-wrapper .footnote-note {
+		display: none;
+	}
+	body.single-post .footnotes-footer {
+		display: block;
+	}
+}
+
+/*# sourceMappingURL=style.css.map */
