input and about page uat tweaks (#70)
* hide system default input cancel button

* custom-paragraph uat tweaks

* tweak masthead styles and spacing

* use shortcode for author masthead

* add generated styles

--- a/due-processed/sass/abstracts/variables/_structure.scss
+++ b/due-processed/sass/abstracts/variables/_structure.scss
@@ -1,5 +1,6 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
+$size__content-about-width: 636px;
 
 $spacing__x-small: 10px;
 $spacing__small: 20px;
