--- a/due-processed/sass/components/_components.scss
+++ b/due-processed/sass/components/_components.scss
@@ -54,3 +54,7 @@
 /* Masthead
 --------------------------------------------- */
 @import "masthead/masthead";
+
+/* Custom Paragraph Block
+--------------------------------------------- */
+@import "custom-paragraph/custom-paragraph";
