--- a/due-processed/editor.css
+++ b/due-processed/editor.css
@@ -67,19 +67,7 @@ dpfn {
 # Custom Paragraph Block
 --------------------------------------------------------------*/
 .wp-block-due-processed-custom-paragraph {
-	display: flex;
-	justify-content: center;
 	background-color: #e3eff4;
 }
 
-@media (min-width: 769px) {
-	.wp-block-due-processed-custom-paragraph {
-		width: 200vw;
-		position: relative;
-		left: calc(-100vw + 50%);
-	}
-}
-
-.wp-block-due-processed-custom-paragraph p {
-	width: 636px;
-}
+/*# sourceMappingURL=editor.css.map */
