--- a/due-processed/sass/base/elements/_fields.scss
+++ b/due-processed/sass/base/elements/_fields.scss
@@ -27,6 +27,12 @@ textarea {
 	}
 }
 
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+	-webkit-appearance: none;
+	appearance: none;
+}
+
 select {
 	border: 1px solid $color__border-input;
 }
